изменил стиль страницы:о системе

--- a/client/src/app/pages/sys-info-page/sys-info-page.component.html
+++ b/client/src/app/pages/sys-info-page/sys-info-page.component.html
@@ -161,7 +161,7 @@
 </div> -->
 
 
-<div>
+<div class="container">
     <h1 class="main-title">О системе</h1>
 
     <div class="section">
@@ -203,7 +203,7 @@
             <li class="step">Если данные введены некорректно или учетная запись не существует, будет отображено сообщение об ошибке.</li>
         </ul>
 
-        <p>Пример изображения, иллюстрирующего процесс входа:</p>
+        <p class="p-img">Пример изображения, иллюстрирующего процесс входа:</p>
         <img class="image" src="login.jpg" width="1500px" alt="signIcon" />
     </div>
 
@@ -218,7 +218,7 @@
             <li class="step">Убедитесь, что введенные данные корректны, и не забывайте, что пароль должен быть безопасным.</li>
         </ul>
 
-        <p>Пример изображения, иллюстрирующего процесс регистрации:</p>
+        <p class="p-img">Пример изображения, иллюстрирующего процесс регистрации:</p>
         <img class="image" src="registration.jpg" width="1500px" alt="signIcon" />
     </div>
 
@@ -244,7 +244,7 @@
 
         <p>Если пользователь нажмет на выбранное комплектующее из списка, то откроется модальное окно комплектующего с подробными характеристиками. Здесь будет отображаться соответствующая информация: название комплектующего, описание, рейтинг, гарантия, производитель, изображение. После информации о товаре находится кнопка "Добавить в корзину". При нажатии на эту кнопку соответствующая позиция будет добавлена в корзину.</p>
 
-        <p>Пример изображения модального окна комплектующего:</p>
+        <p class="p-img">Пример изображения модального окна комплектующего:</p>
         <img class="image" src="modal_window.jpg" width="1500px" alt="signIcon" />
 
         <h3 class="subsection-title">В боковой панели представлены следующие элементы интерфейса:</h3>
@@ -259,7 +259,7 @@
             <li class="feature-item">Кнопка "Сбросить" - по нажатию на данную кнопку отменяются выбарнные фильтры и сортировка, а также система перерисовывает каталог комплектующих, возвращая первоначальный вариант.</li>
         </ul>
 
-        <p>Пример изображения главной страницы сайта:</p>
+        <p class="p-img">Пример изображения главной страницы сайта:</p>
         <img class="image" src="index_page.jpg" width="1500px" alt="signIcon" />
     </div>
 
@@ -277,7 +277,7 @@
             <li class="feature-item">"Перейти к оплате" – для создания заказа, после нажатия данного элемента заказ переместиться на страницу текущие заказы.</li>
         </ul>
 
-        <p>Пример изображения страницы с корзиной:</p>
+        <p class="p-img">Пример изображения страницы с корзиной:</p>
         <img class="image" src="сart.jpg" width="1500px" alt="signIcon" />
     </div>
 
@@ -295,10 +295,10 @@
             <li class="feature-item">"Перейти к оплате" – для создания заказа, после нажатия данного элемента заказ переместиться на страницу "Мои заказы".</li>
         </ul>
 
-        <p>Пример изображения страницы с корзиной:</p>
+        <p class="p-img">Пример изображения страницы с корзиной:</p>
         <img class="image" src="zakaz.jpg" width="1500px" alt="signIcon" />
 
-        <p>Пример изображения страницы "Мои заказы":</p>
+        <p class="p-img">Пример изображения страницы "Мои заказы":</p>
         <img class="image" src="сart.jpg" width="1500px" alt="signIcon" />  
     </div>
 </div>
