--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -21,26 +21,44 @@
   </div>
 </nav> -->
 
-
 <nav>
   <div routerLink="/" routerLinkActives="active-link" class="company-logo">
     <img src="logo.png" width="50px" height="50px" alt="logoImg" />
-    <div  class="company-logo__info">
+    <div class="company-logo__info">
       <h1>ATECH SHOP</h1>
       <p>Комплектующие для ПК</p>
     </div>
   </div>
-   <!-- <app-seach-bar class="search-bar"></app-seach-bar>  -->
+  <!-- <app-seach-bar class="search-bar"></app-seach-bar>  -->
   <div class="sign-in-container">
-    <a routerLink="/sys-info" routerLinkActive="active-link" class="sys-info">О системе</a>
-    <a routerLink="/devs-info" routerLinkActive="active-link" class="devs-info">О разработчиках</a>
-    <button routerLink="/cart" routerLinkActive="active-link" class="sign-in-container__cart-btn">
+    <a routerLink="/sys-info" routerLinkActive="active-link" class="sys-info"
+      >О системе</a
+    >
+    <a routerLink="/devs-info" routerLinkActive="active-link" class="devs-info"
+      >О разработчиках</a
+    >
+    <button
+      routerLink="/cart"
+      routerLinkActive="active-link"
+      class="sign-in-container__cart-btn"
+    >
       <img src="cart-icon.png" width="22px" height="16px" alt="signIcon" />
-      <div class="cart-counter">{{cartCounter}}</div>
+      <div *ngIf="cartCounter" class="cart-counter">{{ cartCounter }}</div>
     </button>
-    <button class="sign-in-container__sign-btn" (click)="openSignInModal()"> 
+    <button
+      *ngIf="!isAuth"
+      class="sign-in-container__sign-btn"
+      (click)="openSignInModal()"
+    >
       <img src="sign-in-icon.png" width="10px" height="12px" alt="signIcon" />
       Войти
+    </button>
+    <button
+      *ngIf="isAuth"
+      class="sign-in-container__sign-btn"
+      (click)="logoutHandler()"
+    >
+      Выйти
     </button>
   </div>
 </nav>
