--- a/client/src/app/pages/sys-info-page/sys-info-page.component.html
+++ b/client/src/app/pages/sys-info-page/sys-info-page.component.html
@@ -1,166 +1,3 @@
-<!-- <div>
-    <h1>О системе</h1>
-
-    <div>
-        <h2>Об интернет магазине</h2>
-
-        <p>Интернет-магазин представляет собой цифровую платформу, на которой пользователи
-        могут удобно просматривать ассортимент товаров, делать заказы и оплачивать покупки, 
-        не выходя из дома. Он предлагает множество функций, таких как фильтры для поиска, 
-        сортировка по различным критериям </p>
-    </div>
-
-    <div>
-        <h2>Инструкция по запуску проекта</h2>
-
-        <ol>
-            <li>Шаг 1: Установите Node.js с официального сайта.</li>
-            <ul>
-                <li>Перейдите по ссылке <a href="https://nodejs.org/" target="_blank">https://nodejs.org/</a></li>
-                <li>После установки проверьте версию Node.js командой <code>node -v</code></li>
-            </ul>
-            <li>Шаг 2: Установите Angular CLI с помощью команды: npm install -g &#64;angular/cli</li>
-            <li>Шаг 3: Клонируйте проект и перейдите: git clone "ссылка на репозиторий"</li>
-            <li>Шаг 4: Перейдите в его папку: cd путь/к/проекту"</li>
-            <li>Шаг 5: Установите зависимости проекта: npm install</li>
-            <li>Шаг 5: Запустите проект командой: ng serve</li>
-            <li>Шаг 6: Перейдите в браузер по адресу: http://localhost:4200</li>
-        </ol>
-    </div>
-
-    <div>
-        <h2>Как войти в систему</h2>
-
-        <ul>
-            <li>На главной странице сайта в шапке в правом верхнем углу находится кнопка «Войти».</li>
-            <li>По нажатию на эту кнопку откроется модальное окно для авторизации.</li>
-            <li>В модальном окне необходимо ввести свой Email и Пароль в соответствующие поля.</li>
-            <li>После ввода данных нажмите кнопку «Войти».</li>
-            <li>Обратите внимание, что администратор может войти только под уникальной комбинацией Email и пароля.</li>
-            <li>Если данные введены некорректно или учетная запись не существует, будет отображено сообщение об ошибке.</li>        
-        </ul>
-
-        <p>Пример изображения, иллюстрирующего процесс входа:</p>
-        <img src="login.jpg" width="1500px"  alt="signIcon" />
-    </div>
-
-    <div>
-        <h2>Как зарегистрироваться в системе:</h2>
-
-        <ul>
-            <li>Если у вас еще нет учетной записи на сайте, вам нужно пройти процесс регистрации.</li>
-            <li>В модальном окне входа есть ссылка с надписью «Зарегистрироваться». Нажмите на нее, чтобы открыть форму регистрации.</li>
-            <li>В открывшемся окне регистрации введите свой Email и Пароль в соответствующие поля.</li>
-            <li>После ввода данных нажмите кнопку «Зарегистрироваться».</li>
-            <li>Убедитесь, что введенные данные корректны, и не забывайте, что пароль должен быть безопасным.</li>
-        </ul>
-
-        <p>Пример изображения, иллюстрирующего процесс регистрации:</p>
-        <img src="registration.jpg" width="1500px"  alt="signIcon" />
-    </div>
-
-    <div>
-        <h2>Обзор главной страницы сайта</h2>
-
-        <p>Страница будет состоит из трех частей: шапка, 
-        панель навигации, левая боковая панель и основная часть, где находится меню комплектующих.</p>
-
-        <h3>В шапке представлены следующие функции:</h3>
-        <ul>
-            <li>«Войти» – для перехода на страницу авторизации пользователя,
-                в случае если пользователь уже авторизовался, там располагается кнопка «Профиль».
-                При нажатии на данную кнопку всплывает модальное окно, на котором расположены 2 ссылки:
-                «Заказы» и «Выйти». При нажатии на ссылку «Заказы» открывается страница со всеми заказами пользователя. 
-                При нажатии на ссылку «Выйти» система закрывает доступ.</li>
-            <li>«О системе» - для предоставления информации о системе.</li>
-            <li>«О разработчиках - для предоставления информации о разработчиках.</li>
-            <li>"Корзина" - для просмотра добавленных товаров, их количества, итоговой стоимости и стоимости каждого товара.</li>
-        </ul>
-
-        <h3>В основной части представлены следующие элементы интерфейса:</h3>
-        <ul>
-            <li>«Поиск» – для отображения комплектующего введённого в поле для поиска.</li>
-            <li>Панель навигации, на которой отображается список представленных комплектующих,
-                при нажатии на название любого комплектующего открывается страница с данным типом комплектующих.</li>
-            <li>Каталог комплектующих, где в характеристику каждого входит его название, краткое описание и цена,
-                а также кнопка «Добавить», с помощью которой можно добавить выбранное комплектующее в корзину,
-                при нажатии же на изображение комплектующего пользователю откроется модальное окно 
-                со справочной информацией о данном комплектующем.</li>
-        </ul>
-
-        <p>Если пользователь нажмет на выбранное комплектующее из списка, то откроется модальное окно комплектующего с подробными характеристиками.
-            Здесь будет отображаться соответствующая информация: название комплектующего, описание, рейтинг, гарантия, производитель, изображение.
-            После информации о товаре находится кнопка "Добавить в корзину". При нажатии на эту кнопку соответствующая позиция будет добавлена в корзину. 
-        </p>
-
-        <p>Пример изображения модального окна комплектующего:</p>
-        <img src="modal_window.jpg" width="1500px"  alt="signIcon" />
-
-        <h3>В боковой панели представлены следующие элементы интерфейса:</h3>
-        <ul>
-            <li>Фильтрация по цене - пользователи могут выбрать комплектующие по цене или задать диапазон цен, в котором будет находится цена комплектующего.</li>
-            <li>Фильтрация по гарантии - пользователи могут выбрать комплектующие по гарантии или задать диапазон гарантии, в котором будет находится гарантия комплектующего.</li>
-            <li>Фильтрация по производителю - пользователи могут выбрать комплектующие по производителю.</li>
-            <li>Кнопка "Применить" - по нажатию на данную кнопку приминяются выбарнные фильтры и система перерисовывает каталог комплектующих в соответсвии с выбранными фильтрами.</li>
-            <li>Сортировка по цене - пользователи могут отсортировать каталог комплектующих по цене по возрастанию и в обратном порядке.</li>
-            <li>Сортировка по производителю - пользователи могут отсортировать каталог комплектующих по производителю в алфавитном порядке.</li>
-            <li>Сортировка по гарантии - пользователи могут отсортировать каталог комплектующих по гарантии по возрастанию и в обратном порядке.</li>
-            <li>Кнопка "Сбросить" - по нажатию на данную кнопку отменяются выбарнные фильтры и сортировка, а также система перерисовывает каталог комплектующих, возвращая первоначальный вариант.</li>
-        </ul>
-
-        <p>Пример изображения главной страницы сайта:</p>
-        <img src="index_page.jpg" width="1500px"  alt="signIcon" />
-    </div>
-
-    <div>
-        <h2>Обзор страницы c корзиной</h2>
-        
-        <p>Основная часть данной страницы состоит из трёх разделов: корзина, персональная информация и адрес доставки.</p>
-
-        <p>На данной странице можно просмотреть добавленные товары, их количество, итоговую стоимость и стоимость каждого товара, а также в данном пункте будут представлены следующие функции:</p>
-
-        <ul>
-            <li>"Очистить корзину" - для удаления всех товаров из заказа.</li>
-            <li>"+" и "-" - для изменения количества данного товара в заказе.</li>
-            <li>"х" - для удаления товара из заказа.</li>
-            <li>Перейти к оплате» – для создания заказа, после нажатия данного элемента заказ переместиться на страницу текущие заказы.</li>
-        </ul>
-
-        <p>Если пользователь нажмет на выбранное комплектующее из списка, то откроется модальное окно комплектующего с подробными характеристиками.
-            Здесь будет отображаться соответствующая информация: название комплектующего, описание, рейтинг, гарантия, производитель, изображение.
-            После информации о товаре находится кнопка "Добавить в корзину". При нажатии на эту кнопку соответствующая позиция будет добавлена в корзину. 
-        </p>
-
-        <p>Пример изображения страницы с корзиной:</p>
-        <img src="сart.jpg" width="1500px"  alt="signIcon" />
-    </div>
-
-    <div>
-        <h2>Обзор страницы "Мои заказы"</h2>
-        
-        <p>Основная часть данной страницы состоит из трёх разделов: корзина, персональная информация и адрес доставки.</p>
-
-        <p>На данной странице можно просмотреть добавленные товары, их количество, итоговую стоимость и стоимость каждого товара, а также в данном пункте будут представлены следующие функции:</p>
-
-        <ul>
-            <li>"Очистить корзину" - для удаления всех товаров из заказа.</li>
-            <li>"+" и "-" - для изменения количества данного товара в заказе.</li>
-            <li>"х" - для удаления товара из заказа.</li>
-            <li>Перейти к оплате» – для создания заказа, после нажатия данного элемента заказ переместиться на страницу "Мои заказы".
-                На данной странице можно будет просмотреть статус выполнения всех заказов, их номер, дату и время оформления заказа,
-                стоимость каждого товара в конкретном заказе и общую стоимость заказа.
-            </li>
-        </ul>
-
-        <p>Пример изображения страницы с корзиной:</p>
-        <img src="zakaz.jpg" width="1500px"  alt="signIcon" />
-
-        <p>Пример изображения страницы "Мои заказы":</p>
-        <img src="сart.jpg" width="1500px"  alt="signIcon" />  
-    </div>
-</div> -->
-
-
 <div class="container">
     <h1 class="main-title">О системе</h1>
 
@@ -179,8 +16,8 @@
         <ol class="steps-list">
             <li class="step">Шаг 1: Установите Node.js с официального сайта.</li>
             <ul class="substeps">
-                <li>Перейдите по ссылке <a href="https://nodejs.org/" target="_blank">https://nodejs.org/</a></li>
-                <li>После установки проверьте версию Node.js командой <code>node -v</code></li>
+                <li>- Перейдите по ссылке <a href="https://nodejs.org/" target="_blank">https://nodejs.org/</a></li>
+                <li>- После установки проверьте версию Node.js командой <code>node -v</code></li>
             </ul>
             <li class="step">Шаг 2: Установите Angular CLI с помощью команды: npm install -g &#64;angular/cli</li>
             <li class="step">Шаг 3: Клонируйте проект и перейдите: git clone "ссылка на репозиторий"</li>
@@ -239,10 +76,8 @@
         <ul class="features-list">
             <li class="feature-item">«Поиск» – для отображения комплектующего, введённого в поле для поиска.</li>
             <li class="feature-item">Панель навигации, на которой отображается список представленных комплектующих, при нажатии на название любого комплектующего открывается страница с данным типом комплектующих.</li>
-            <li class="feature-item">Каталог комплектующих, где в характеристику каждого входит его название, краткое описание и цена, а также кнопка «Добавить», с помощью которой можно добавить выбранное комплектующее в корзину, при нажатии же на изображение комплектующего пользователю откроется модальное окно со справочной информацией о данном комплектующем.</li>
+            <li class="feature-item">Каталог комплектующих, где в характеристику каждого входит его название, краткое описание и цена, а также кнопка «Добавить», с помощью которой можно добавить выбранное комплектующее в корзину. Если пользователь нажмет на выбранное комплектующее из списка, то откроется модальное окно комплектующего с подробными характеристиками. Здесь будет отображаться соответствующая информация: название комплектующего, описание, рейтинг, гарантия, производитель, изображение. После информации о товаре находится кнопка "Добавить в корзину". При нажатии на эту кнопку соответствующая позиция будет добавлена в корзину.</li>
         </ul>
-
-        <p>Если пользователь нажмет на выбранное комплектующее из списка, то откроется модальное окно комплектующего с подробными характеристиками. Здесь будет отображаться соответствующая информация: название комплектующего, описание, рейтинг, гарантия, производитель, изображение. После информации о товаре находится кнопка "Добавить в корзину". При нажатии на эту кнопку соответствующая позиция будет добавлена в корзину.</p>
 
         <p class="p-img">Пример изображения модального окна комплектующего:</p>
         <img class="image" src="modal_window.jpg" width="1500px" alt="signIcon" />
@@ -262,6 +97,51 @@
         <p class="p-img">Пример изображения главной страницы сайта:</p>
         <img class="image" src="index_page.jpg" width="1500px" alt="signIcon" />
     </div>
+
+    <div class="section">
+        <h2 class="section-title">Обзор главной страницы сайта для администратора</h2>
+
+        <p>Страница состоит из трех частей: шапка, панель навигации, левая боковая панель и основная часть, где находится меню комплектующих.</p>
+
+        <h3 class="subsection-title">В шапке представлены следующие функции:</h3>
+        <ul class="features-list">
+            <li class="feature-item">«Выйти» - при нажатии на данную кнопку система закрывает доступ.
+            <li class="feature-item">«О системе» - для предоставления информации о системе.</li>
+            <li class="feature-item">«О разработчиках» - для предоставления информации о разработчиках.</li>
+        </ul>
+
+        <h3 class="subsection-title">В основной части представлены следующие элементы интерфейса:</h3>
+        <ul class="features-list">
+            <li class="feature-item">«Поиск» – для отображения комплектующего, введённого в поле для поиска.</li>
+            <li class="feature-item">«Добавить товар» – при нажатии на данную кнопку откроется модальное окно, где администратор сможет добавить новое комплектующее, 
+            дать название, добавить картинку, описание, соответствующие характеристики и подкатегорию данной позиции.</li>
+            <li class="feature-item">Панель навигации, на которой отображается список представленных комплектующих, при нажатии на название любого комплектующего открывается страница с данным типом комплектующих.</li>
+            <li class="feature-item">Каталог комплектующих, где в характеристику каждого входит его название, краткое описание и цена,
+                а также кнопка «Удалить», с помощью которой можно удалить выбранное комплектующее из меню. Если администратор нажмет на выбранное комплектующее из списка,
+                то откроется модальное окно комплектующего с подробными характеристиками, которые можно отредактировать. Здесь будет отображаться соответствующая информация: название комплектующего,
+                описание, рейтинг, гарантия, производитель, изображение. После информации о товаре находится кнопка "Подтвердить". При нажатии на эту кнопку 
+                соответствующие изменения при редактировании товара будут применины.</li>
+        </ul>
+
+        <p class="p-img">Пример изображения модального окна комплектующего со стороны администратора:</p>
+        <img class="image" src="modal_windowA.jpg" width="1500px" alt="signIcon" />
+
+        <h3 class="subsection-title">В боковой панели представлены следующие элементы интерфейса:</h3>
+        <ul class="features-list">
+            <li class="feature-item">Фильтрация по цене - администратор может выбрать комплектующие по цене или задать диапазон цен, в котором будет находится цена комплектующего.</li>
+            <li class="feature-item">Фильтрация по гарантии - администратор может выбрать комплектующие по гарантии или задать диапазон гарантии, в котором будет находится гарантия комплектующего.</li>
+            <li class="feature-item">Фильтрация по производителю - администратор может выбрать комплектующие по производителю.</li>
+            <li class="feature-item">Кнопка "Применить" - по нажатию на данную кнопку приминяются выбарнные фильтры и система перерисовывает каталог комплектующих в соответсвии с выбранными фильтрами.</li>
+            <li class="feature-item">Сортировка по цене - администратор может отсортировать каталог комплектующих по цене по возрастанию и в обратном порядке.</li>
+            <li class="feature-item">Сортировка по производителю - администратор может отсортировать каталог комплектующих по производителю в алфавитном порядке.</li>
+            <li class="feature-item">Сортировка по гарантии - администратор может отсортировать каталог комплектующих по гарантии по возрастанию и в обратном порядке.</li>
+            <li class="feature-item">Кнопка "Сбросить" - по нажатию на данную кнопку отменяются выбарнные фильтры и сортировка, а также система перерисовывает каталог комплектующих, возвращая первоначальный вариант.</li>
+        </ul>
+
+        <p class="p-img">Пример изображения главной страницы сайта для администратора:</p>
+        <img class="image" src="index_pageA.jpg" width="1500px" alt="signIcon" />
+    </div>
+
 
     <div class="section">
         <h2 class="section-title">Обзор страницы с корзиной</h2>
@@ -294,9 +174,6 @@
             <li class="feature-item">"х" - для удаления товара из заказа.</li>
             <li class="feature-item">"Перейти к оплате" – для создания заказа, после нажатия данного элемента заказ переместиться на страницу "Мои заказы".</li>
         </ul>
-
-        <p class="p-img">Пример изображения страницы с корзиной:</p>
-        <img class="image" src="zakaz.jpg" width="1500px" alt="signIcon" />
 
         <p class="p-img">Пример изображения страницы "Мои заказы":</p>
         <img class="image" src="сart.jpg" width="1500px" alt="signIcon" />  
