--- a/client/src/app/pages/sys-info-page/sys-info-page.component.scss
+++ b/client/src/app/pages/sys-info-page/sys-info-page.component.scss
@@ -64,3 +64,13 @@
     display: block;
     margin: 20px auto; /* Центрируем изображения */
   }
+
+ul li{
+  list-style: circle;
+}
+
+.substeps li{
+  list-style: none;
+
+}
+
